--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -37,6 +37,8 @@ data-notebook-path="{{notebook_path | urlencode}}"
 
 {% block header %}
 
+<div style="position:absolute;top:0;bottom:0;left:0;right:0;z-index:999;background:#FFFFFF;padding:5px;color:#565656;" id="load_layer">Loading...</div>
+
 <div id="menubar-container" class="container">
 
     <div>
