--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -55,6 +55,7 @@ data-notebook-path="{{notebook_path | urlencode}}"
           <i id="modal_indicator" class="navbar-text"></i>
           <span id="notification_area"></span>
     </div>
+    <div class="clearfix"></div>
 
 <div id="menubar"  style="display: none;">
     <div id="menus" class="navbar navbar-default" role="navigation">
