--- a/notebook/templates/page-no-head.html
+++ b/notebook/templates/page-no-head.html
@@ -117,13 +117,12 @@ dir="ltr">
 
 <noscript>
     <div id='noscript'>
-      {% trans %}Jupyter Notebook requires JavaScript.{% endtrans %}<br>
+      {% trans %}requires JavaScript.{% endtrans %}<br>
       {% trans %}Please enable it to proceed. {% endtrans %}
   </div>
 </noscript>
 
-  <div class="header-bar"></div>
-
+  <div class="header">
   {% block header %}
   {% endblock %}
 </div>
