--- a/notebook/static/notebook/less/savewidget.less
+++ b/notebook/static/notebook/less/savewidget.less
@@ -4,24 +4,30 @@ span.save_widget {
     display: flex;
     justify-content: flex-start;
     align-items: baseline;
-    width: 50%;
+    width: 100%;
     flex: 1;
+    font-size: small;
+    padding: 0 0 0 5px;
     
     span.filename {
         height: 100%;
-        line-height: 1em;
-        margin-left: @padding-large-horizontal;
+        // line-height: 1em;
+        // margin-left: @padding-large-horizontal;
         border: none;
-        font-size: 146.5%;
+        font-size: 110%;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
         &:hover{
             // ensure body is lighter on dark palette, 
             // and vice versa
-            background-color:contrast(@body-bg, lighten(@body-bg,30%), darken(@body-bg,10%));
+            background-color:contrast(@body-bg, lighten(@body-bg,10%), darken(@body-bg,10%));
         }
         .corner-all;
+    }
+
+    span.error {
+        color: red;
     }
 }
 
@@ -40,16 +46,6 @@ span.checkpoint_status, span.autosave_status {
     font-size: small;
     white-space: nowrap;
     padding: 0 5px;
-}
-
-@media (max-width: @screen-xs-max) {
-    span.save_widget {
-        font-size: small;
-        padding: 0 0 0 5px;
-    }
-    span.checkpoint_status, span.autosave_status {
-        display: none;
-    }
 }
 
 @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
