--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -339,8 +339,8 @@ data-notebook-path="{{notebook_path | urlencode}}"
         </div>
         <div class="col-xs-5 text-right">
             <div class="bottom-btn-box">
-                <button class="btn-save-file btn-c-default btn-md mr-5" title="保存所有修改">保存</button>
-                <button class="btn-run-all btn-c-default btn-md" title="运行所有Cell">运行</button>
+                <button class="btn-run-all btn-c-default btn-md" title="运行全部Cell"><i  class="fa fa-play"></i>&nbsp;运行</button>
+                <button class="btn-save-file btn-c-default btn-md mr-5" title="保存所有修改"><i class="fa fa-save"></i>&nbsp;保存</button>
             </div>
         </div>
     </div>
@@ -359,9 +359,9 @@ data-notebook-path="{{notebook_path | urlencode}}"
 
 <div class="container">
     <div id="footer-btns" class="bottom-btn-box">
-        <button class="btn-reset-file btn-c-white mr-10" title="重置当前所有代码">重置</button>
-        <button class="btn-download-file btn-c-white mr-10" title="下载文件 (.py)">下载</button>
-        <button class="btn-save-file btn-c-white" title="保存所有修改">保存</button>
+        <button class="btn-reset-file btn-c-white mr-10" title="重置当前所有代码"><i class="fa fa-undo"></i>&nbsp;重置</button>
+        <button class="btn-download-file btn-c-white mr-10" title="下载文件 (.py)"><i class="fa fa-cloud-download"></i>&nbsp;下载</button>
+        <button class="btn-save-file btn-c-white" title="保存所有修改"><i class="fa fa-save"></i>&nbsp;保存</button>
     </div>
 </div>
 
