--- a/notebook/templates/notebook.html
+++ b/notebook/templates/notebook.html
@@ -328,19 +328,12 @@ data-notebook-path="{{notebook_path | urlencode}}"
 
 <div id="head-fixed">
     <div class="row">
-        <div class="col-xs-6" style="padding-top: 8px;">
-            <span id="save_widget" class="save_widget">
-                <span id="notebook_name" class="filename" title="{{notebook_name}}"></span>
-                <span class="fileext" title="{{notebook_name}}"></span>
-                <span class="autosave_status"></span>
-                <!-- <i class="fa fa-pencil ml-10" title="点击文件名进行文件重命名"  style="color: #00a3da;"></i> -->
-            </span>
-            
-        </div>
-        <div class="col-xs-6 text-right">
+        <div class="col-xs-12 text-right">
             <div class="bottom-btn-box">
-                <button class="btn-run-all btn-c-default btn-md" title="运行全部Cell"><i  class="fa fa-play"></i>&nbsp;运行</button>
-                <button class="btn-save-file btn-c-default btn-md mr-5" title="保存所有修改"><i class="fa fa-save"></i>&nbsp;保存</button>
+                <button class="btn-run-all btn-c-default btn-auto mr-5" title="运行全部代码"><i  class="fa fa-play"></i>&nbsp;运行全部</button>
+                <button class="btn-save-file btn-c-default btn-auto mr-5" title="保存所有修改"><i class="fa fa-save"></i>&nbsp;保存</button>
+                <button class="btn-reset-file btn-c-default btn-auto mr-5" title="重置当前所有代码"><i class="fa fa-undo"></i>&nbsp;重置</button>
+                <button class="btn-download-file btn-c-default btn-auto" title="下载文件 (.py)"><i class="fa fa-cloud-download"></i>&nbsp;下载</button>
             </div>
         </div>
     </div>
@@ -356,14 +349,7 @@ data-notebook-path="{{notebook_path | urlencode}}"
 {% endblock %}
 
 {% block after_site %}
-
-<div class="container">
-    <div id="footer-btns" class="bottom-btn-box">
-        <button class="btn-reset-file btn-c-white mr-10" title="重置当前所有代码"><i class="fa fa-undo"></i>&nbsp;重置</button>
-        <button class="btn-download-file btn-c-white mr-10" title="下载文件 (.py)"><i class="fa fa-cloud-download"></i>&nbsp;下载</button>
-        <button class="btn-save-file btn-c-white" title="保存所有修改"><i class="fa fa-save"></i>&nbsp;保存</button>
-    </div>
-</div>
+<div class="run-tips" style="display: none;"></div>
 
 <div id="pager">
     <div id="pager-contents">
