--- a/notebook/static/custom/css/notebook.css
+++ b/notebook/static/custom/css/notebook.css
@@ -227,7 +227,7 @@ div.output_wrapper {
 }
 
 #ipython-main-app {
-    margin-top: 50px;
+    margin-top: 60px;
 }
 
 div.input_area {
@@ -255,13 +255,14 @@ div.input_area {
 .run-tips {
     position: fixed;
     bottom: 0;
-    right: 0;
+    left: 0;
     display: block;
     background: #ddd;
     font-size: 12px;
     color: #444;
     padding: 1px 8px;
     border-radius: 1px;
+    z-index: 99;
 }
 
 .run-tips.error {
