--- a/notebook/static/custom/css/notebook.css
+++ b/notebook/static/custom/css/notebook.css
@@ -86,6 +86,11 @@
     width: 100%;
     z-index: 999;
     box-shadow:0px 2px 10px 0 rgba(9, 24, 145, 0.1); 
+    min-width: 380px;
+}
+
+.notebook_app {
+    min-width: 380px;
 }
 
 .bottom-btn-box {
@@ -253,16 +258,9 @@ div.input_area {
 }
 
 .run-tips {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    display: block;
-    background: #ddd;
     font-size: 12px;
-    color: #444;
-    padding: 1px 8px;
-    border-radius: 1px;
-    z-index: 99;
+    padding-left: 5px;
+    padding-top: 15px;
 }
 
 .run-tips.error {
